# Channelarr

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  channelarr.py  config.example.yaml  pyproject.toml  readme.md
api/: client.py  endpoints.py
audit/: checker.py
cleanup/: renamer.py  stream_sorter.py
config/: loader.py  schema.py  wizard.py
core/: brands.py  differ.py  executor.py  models.py  normalizer.py  planner.py
dedup/: finder.py  merger.py
epg/: matcher.py
filters/: allowlist.py  blocklist.py  lock.py
logging_/: history.py  run_logger.py
matching/: base.py  exact.py  fuzzy.py  regex_match.py
pairings/: store.py
priority/: resolver.py
tests/: conftest.py  test_attachment_matching.py  test_audit.py  test_cleanup.py  test_client.py  test_config_loader.py  test_dedup.py  test_executor.py  test_filters.py  test_group_filter.py  test_group_regions.py  test_group_scoping.py  test_matching.py  test_normalizer.py  test_pairings.py  test_planner.py  test_priority_resolver.py
ui/: console.py  interactive.py  pairing_wizard.py
utils/: cli_args.py
