[project]
name = "channelarr"
version = "0.1.0"
description = "Safety-first Dispatcharr channel and stream manager. Fork of dispatcharr-group-channel-streams by kpirnie (github.com/udezekene/Channelarr)."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
fuzzy = ["rapidfuzz>=3.0"]
web = ["flask>=3.0", "flask-cors>=4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "responses>=0.25", "mypy>=1.9", "ruff>=0.4"]

[project.scripts]
channelarr = "channelarr:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
